# pinky_pro

./: README.md
pinky_bringup/: CMakeLists.txt  package.xml
pinky_bringup/config/: pinky_controllers.yaml
pinky_bringup/launch/: bringup_gz_sim_robot.launch.py  bringup_robot.launch.py
pinky_bringup/rviz/: view_robot.rviz
pinky_description/launch/: upload_robot.launch.py
pinky_description/meshes/collision/: rplidar_c1.stl
pinky_description/meshes/visual/: caster_mount.dae  main_wheel.dae
pinky_description/rviz/: view_robot.rviz
pinky_description/urdf/: pinky.urdf.xacro  pinky_gz.urdf.xacro  pinky_ros2_control.urdf.xacro  robot.urdf.xacro
pinky_emotion/pinky_emotion/: pinky_emotion.py  pinky_lcd.py
pinky_gz_sim/: CMakeLists.txt
pinky_gz_sim/launch/: bringup_gz_sim.launch.py
pinky_gz_sim/plugins/: gz_lamp_control_plugin.cpp
pinky_gz_sim/worlds/: pinky_factory.world
pinky_hardware_interface/: CMakeLists.txt  package.xml  pinky_hardware_interface.xml
pinky_hardware_interface/include/pinky_hardware_interface/: pinky_hardware_interface.hpp
pinky_hardware_interface/src/: pinky_hardware_interface.cpp
pinky_imu_bno055/: CMakeLists.txt  package.xml
pinky_imu_bno055/src/: main_node.cpp
pinky_interfaces/: CMakeLists.txt
pinky_lamp_control/: CMakeLists.txt  package.xml
pinky_lamp_control/src/: main_node.cpp
pinky_navigation/launch/: bringup_launch.xml  navigation_launch.xml
pinky_navigation/params/: nav2_params.yaml
pinky_screen_control/: package.xml  setup.cfg  setup.py
pinky_screen_control/pinky_screen_control/: main_node.py
pinky_sensor_adc/: CMakeLists.txt  package.xml
